# scan2wiki

./: .components.yaml  .project  404.html  README.md  index.html  macsetup.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
docs/: index.md
scan/: ai_tasks.py  amazon.py  barcode.py  dms.py  dms_browser.py  dms_views.py  entity.py  entity_view.py  folderwatcher.py  image_cropper.py  logger.py  pdf.py  product.py  profiler.py  scan2wiki.py  scan_cmd.py  scan_webserver.py  scans.py  upload.py  upload_job.py  uploadentry.py  version.py  webcam.py  webserver.py  wikiuploaddialog.py
scan2wiki_examples/: 2015_11_14_17_53_37.txt  ai_tasks.yaml
scan2wiki_examples/2021/: 2021_10_20_15_51_33.txt  2021_11_01_13_03_50.txt
scripts/: blackisort  install  macinstall  papermerge  run
search/: search_index.json
templates/: datatable.html  progress.html  upload.html  watch.html
templates/bitplan/: base.html  watch.html
templates/scan2wiki/: datatable.html  index.html  progress.html  upload.html  watch.html
tests/: basetest.py  test_ai_tasks.py  test_amazon.py  test_barcode.py  test_product.py  test_scans.py  testdms.py  testfolderwatch.py  testpdfextract.py  testupload.py
tests/data/2021/: 2021_10_20_15_51_33.txt  2021_11_01_13_03_50.txt
web/: webserver.py
